// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistrationEventInfo does not render empty contact info 1`] = `
<div>
  <article
    class="MuiBox-root css-1t733h9"
  >
    <div
      aria-level="2"
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-4hwpgk-MuiGrid2-root"
      role="heading"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <button
          aria-label="expand row"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-14su50-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="KeyboardArrowRightIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z"
            />
          </svg>
        </button>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-grow css-k08dai-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-xzrkfy-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-grow css-jn8rgo-MuiGrid2-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
            >
              Suomen Noutajakoirajärjestö ry
            </span>
          </div>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-auto css-re87i7-MuiGrid2-root"
        >
          NOU dateFormat.datespan start, end test location (test)
        </div>
      </div>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-qnbeac-MuiCollapse-root"
      role="region"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1l0gsqt-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-g8s1br-MuiGrid2-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1ebkdj1-MuiTypography-root"
              >
                entryTime
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                dateFormat.datespan start, end
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-g8s1br-MuiGrid2-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1ebkdj1-MuiTypography-root"
              >
                event.organizer
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                Suomen Noutajakoirajärjestö ry
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-g8s1br-MuiGrid2-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1ebkdj1-MuiTypography-root"
              >
                event.judges
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                Tuomari 1
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-g8s1br-MuiGrid2-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1ebkdj1-MuiTypography-root"
              >
                paymentDetails
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                123 €, event.costMember 123 €
                . 
                <span
                  class="MuiTypography-root MuiTypography-caption css-mpaqru-MuiTypography-root"
                >
                  paymentTimeOptions.registration
                </span>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-g8s1br-MuiGrid2-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1ebkdj1-MuiTypography-root"
              >
                event.priority
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                <div
                  class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-cbjrh1-MuiChip-root"
                >
                  <span
                    class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                  >
                    priority.members
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-g8s1br-MuiGrid2-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1ebkdj1-MuiTypography-root"
              >
                event.description
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                test
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`RegistrationEventInfo renders 1`] = `
<div>
  <article
    class="MuiBox-root css-1t733h9"
  >
    <div
      aria-level="2"
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-4hwpgk-MuiGrid2-root"
      role="heading"
    >
      <div
        class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
      >
        <button
          aria-label="expand row"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-14su50-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="KeyboardArrowRightIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z"
            />
          </svg>
        </button>
      </div>
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-grow css-k08dai-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-xzrkfy-MuiGrid2-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-grow css-jn8rgo-MuiGrid2-root"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
            >
              Suomen Noutajakoirajärjestö ry
            </span>
          </div>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-auto css-re87i7-MuiGrid2-root"
        >
          NOU dateFormat.datespan start, end test location (test)
        </div>
      </div>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-qnbeac-MuiCollapse-root"
      role="region"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-1l0gsqt-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-g8s1br-MuiGrid2-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1ebkdj1-MuiTypography-root"
              >
                entryTime
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                dateFormat.datespan start, end
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-g8s1br-MuiGrid2-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1ebkdj1-MuiTypography-root"
              >
                event.organizer
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                Suomen Noutajakoirajärjestö ry
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-g8s1br-MuiGrid2-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1ebkdj1-MuiTypography-root"
              >
                event.judges
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                Tuomari 1
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-g8s1br-MuiGrid2-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1ebkdj1-MuiTypography-root"
              >
                event.official
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                Teemu Toimitsija, 040-official, official@example.com
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-g8s1br-MuiGrid2-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1ebkdj1-MuiTypography-root"
              >
                event.secretary
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                Siiri Sihteeri, 040-secretary, secretary@example.com
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-g8s1br-MuiGrid2-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1ebkdj1-MuiTypography-root"
              >
                paymentDetails
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                123 €, event.costMember 123 €
                . 
                <span
                  class="MuiTypography-root MuiTypography-caption css-mpaqru-MuiTypography-root"
                >
                  paymentTimeOptions.registration
                </span>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-g8s1br-MuiGrid2-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1ebkdj1-MuiTypography-root"
              >
                event.priority
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                <div
                  class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorDefault MuiChip-filledDefault css-cbjrh1-MuiChip-root"
                >
                  <span
                    class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
                  >
                    priority.members
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 MuiGrid2-grid-xl-2 css-g8s1br-MuiGrid2-root"
            >
              <div
                class="MuiTypography-root MuiTypography-caption css-1ebkdj1-MuiTypography-root"
              >
                event.description
              </div>
              <div
                class="MuiTypography-root MuiTypography-body2 css-1pzz4e2-MuiTypography-root"
              >
                test
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;
